--- a/contents/generalities/03-distance.qmd
+++ b/contents/generalities/03-distance.qmd
@@ -119,3 +119,26 @@ $$s(x, y) = \frac{1}{1 + d(x, y)}.$$
 Cette transformation garantit que plus la distance est grande, plus la similarité est faible. Toutefois, l'inverse n'est pas toujours possible car une mesure de similarité ne respecte pas forcément l'inégalité triangulaire. On peut aussi définir la dissemblance entre deux objets:
 $$d^\star(x, y) = 1 - s(x, y).$$
 
+
+## Cas d'un variable qualitative
+
+Pour une variable qualitative, les distances $L_p$ n'ont pas forcément de sens. En effet, si notre variable prend ses valeurs dans l'ensemble $\{ \text{Rouge, Vert, Bleu} \}$, il n'y a pas de sens à calculer $\text{Bleu} - \text{Rouge}$. Dans ce cas, on peut simplement définir la distance à $0$ si deux observations prennent la même modalité et $1$ sinon.
+
+::: {.callout-note icon=false}
+## La distance discrète
+
+Soit $\mathcal{X}$ un ensemble discret et $X$ une variable aéatoire discrète à valeur dans $\mathcal{X}$. Soit $x$ et $y$ deux réalisations de $X$, si $x = y$, $d(x, y) = 0$, sinon $d(x, y) = 1$.
+
+:::
+
+Dans le cas de vecteurs, on compte simplement le nombre de désaccord entre les deux observations.
+
+Nombre d'accord entre $x$ et $y$ : $\sum_{i = 1}^{p} \mathbb{1}(x_i, y_i)$
+
+| Nom | Couleur | Yeux | Cheveux |
+| :---: | ---: | ----: | ----: | 
+| Alice | Rouge | Bleu | Blond |
+| Bob | Vert | Bleu | Roux |
+| Chris | Rouge | Vert | Blond |
+
+: Caractéristiques de trois personnes.
